@@ -138,6 +138,8 @@ Other Changes
 
 * SOLR-14723: Remove the class attribute for the caches in the _default/example configsets (Tim Dillon, Shashank Shekhar)
 
+* SOLR-15057: Avoid unnecessary object retention in FacetRangeProcessor. (Christine Poerschke)
+
 ==================  8.7.0 ==================
 
 Consult the lucene/CHANGES.txt file for additional, low level, changes in this release.
